fit_predictor/cvrp_lehd/evaluates/run5/2025-01-26_10-58-25/problem_iter45_response3.txt_stdout.txt
Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_lehd\VRPModel.py", line 6, in <module>
    from gpt import heuristics_v2 as heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_lehd\gpt.py", line 19
    emphasis_on Depot = distance_matrix[torch.arange(demands.numel()), 0]
                ^^^^^
SyntaxError: invalid syntax

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2/problems/cvrp_lehd/eval.py", line 15, in <module>
    from VRPTester import VRPTester as Tester
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_lehd\VRPTester.py", line 4, in <module>
    from VRPModel import VRPModel as Model
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_lehd\VRPModel.py", line 8, in <module>
    from gpt import heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_lehd\gpt.py", line 19
    emphasis_on Depot = distance_matrix[torch.arange(demands.numel()), 0]
                ^^^^^
SyntaxError: invalid syntax
